# misc

./: README.md
AIOR/: 530x0C.kicad_mod  530x0c.bck  530x0c.lib  AIOR-cache.lib  AIOR-rescue.lib  AIOR.bak  AIOR.kicad_pcb  AIOR.kicad_pcb-bak  AIOR.net  AIOR.pro  AIOR.sch  BTN8962.dcm  BTN8962.lib  ISO1050.lib  README.md  R_0805_HandSolderingII.kicad_mod  R_1206_HandSolderingII.kicad_mod  Si8605.lib  adum1251.lib  c8051f502.lib  dsPIC33EP128GM604.lib  iso1050.mod  sym-lib-table
BPI-AddOn/: BPI-AddOn-cache.lib  BPI-AddOn.bak  (+6 more)
railcontrol/src/: .gitignore  ArgumentHandler.cpp  ArgumentHandler.h  CMakeLists.txt  Config.cpp  Config.h  ControlInterface.h  DataTypes.h  Fallthrough.h  Languages.cpp  Languages.h  Makefile  Manager.cpp  Manager.h  README.md  RailControl.cpp  RailControl.h  TODO  Timestamp.cpp  Timestamp.h  Version.cpp  Version.cpp.in  Version.h  amalgamation.bash  railcontrol.conf.dist
railcontrol/src/DataModel/: Accessory.cpp  Accessory.h  AccessoryBase.cpp  AccessoryBase.h  AccessoryConfig.h  Cluster.cpp  Cluster.h  DataModel.h  Feedback.cpp  Feedback.h  HardwareHandle.cpp  HardwareHandle.h  Layer.h  LayoutItem.cpp  LayoutItem.h  LockableItem.cpp  LockableItem.h  Loco.cpp  Loco.h  LocoConfig.h  LocoFunctions.cpp  LocoFunctions.h  Object.cpp  Object.h  ObjectIdentifier.cpp  ObjectIdentifier.h  Relation.cpp  Relation.h  Route.cpp  Route.h  Serializable.cpp  Serializable.h  Signal.cpp  Signal.h  Street.cpp  Street.h  Switch.cpp  Switch.h  Text.cpp  Text.h  (+4 more)
railcontrol/src/Hardware/: AccessoryCache.cpp  AccessoryCache.h  CS1.h  CS2.cpp  CS2.h  CS2Tcp.cpp  CS2Tcp.h  CS2Udp.cpp  CS2Udp.h  Capabilities.h  CcSchnitte.cpp  CcSchnitte.h  DR5000.h  DccPpExSerial.cpp  DccPpExSerial.h  DccPpExTcp.cpp  DccPpExTcp.h  Ecos.cpp  Ecos.h  HardwareHandler.cpp  HardwareHandler.h  HardwareInterface.h  HardwareParams.h  Hsi88.cpp  Hsi88.h  Intellibox.cpp  Intellibox.h  IntelliboxBase.cpp  IntelliboxBase.h  LocoCache.cpp  LocoCache.h  M6051.cpp  M6051.h  MaerklinCAN.cpp  MaerklinCAN.h  Makefile  MasterControl.cpp  MasterControl.h  MasterControl2.cpp  MasterControl2.h  (+33 more)
railcontrol/src/Hardware/Protocols/: DccPpEx.cpp  DccPpEx.h  DccPpExLocoCache.h  EsuCAN.cpp  EsuCAN.h  MaerklinCAN.cpp  MaerklinCAN.h  P50x.cpp  P50x.h  P50xCache.h  P50xEthernet.h  P50xSerial.h  P50xUhlenbrock.h  Z21.cpp  Z21.h  Z21FeedbackCache.h  Z21LocoCache.h  Z21TurnoutCache.h
railcontrol/src/Hardware/zlib/: README  gzguts.h
railcontrol/src/Logger/: Logger.cpp  Logger.h  LoggerClient.h  LoggerClientConsole.h  LoggerClientFile.h  LoggerClientTcp.h  LoggerServer.cpp  LoggerServer.h
railcontrol/src/MAS/: MAS_Thesis.odp  MAS_Thesis.odt  MAS_Thesis_Disposition.odt  MAS_Thesis_Schema.odt
railcontrol/src/Network/: Select.h  Serial.cpp  Serial.h  TcpClient.cpp  TcpClient.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  UdpConnection.cpp  UdpConnection.h
railcontrol/src/Storage/: Makefile  Sqlite.cpp  Sqlite.h  StorageHandler.cpp  StorageHandler.h  StorageInterface.h  StorageParams.h  TransactionGuard.cpp  TransactionGuard.h
railcontrol/src/Storage/sqlite/: Makefile
railcontrol/src/Utils/: ThreadSafeQueue.h  Utils.cpp  Utils.h
railcontrol/src/WebServer/: HtmlFullResponse.cpp  HtmlFullResponse.h  HtmlResponse.cpp  HtmlResponse.h  HtmlResponseNotFound.cpp  HtmlResponseNotFound.h  HtmlResponseNotImplemented.cpp  HtmlResponseNotImplemented.h  HtmlTag.cpp  HtmlTag.h  HtmlTagAccessory.cpp  HtmlTagAccessory.h  HtmlTagButton.cpp  HtmlTagButton.h  HtmlTagButtonCancel.cpp  HtmlTagButtonCancel.h  HtmlTagButtonCommand.cpp  HtmlTagButtonCommand.h  HtmlTagButtonCommandFullScreen.cpp  HtmlTagButtonCommandFullScreen.h  HtmlTagButtonCommandPressRelease.cpp  HtmlTagButtonCommandPressRelease.h  HtmlTagButtonCommandToggle.cpp  HtmlTagButtonCommandToggle.h  HtmlTagButtonCommandWide.h  HtmlTagButtonMinus.h  HtmlTagButtonOK.cpp  HtmlTagButtonOK.h  HtmlTagButtonPlus.h  HtmlTagButtonPopup.cpp  HtmlTagButtonPopup.h  HtmlTagButtonPopupWide.h  HtmlTagFeedback.cpp  HtmlTagFeedback.h  HtmlTagInput.cpp  HtmlTagInput.h  HtmlTagInputCheckbox.h  HtmlTagInputCheckboxWithLabel.h  HtmlTagInputHidden.h  HtmlTagInputInteger.cpp  (+62 more)
railcontrol/src/buildroot-2018.11/: .config
railcontrol/src/buildroot-2018.11/teddy/etc/bind/: named.conf  root
railcontrol/src/buildroot-2018.11/teddy/etc/dhcp/: dhcpd.conf
railcontrol/src/buildroot-2018.11/teddy/etc/init.d/: S90railcontrol
railcontrol/src/buildroot-2018.11/teddy/etc/network/: interfaces
railcontrol/src/buildroot-2018.11/teddy/etc/ssh/: sshd_config
railcontrol/src/buildroot-2018.11/teddy/opt/railcontrol/: railcontrol
railcontrol/src/buildroot-2018.11/teddy/opt/railcontrol/html/: javascript.js  style.css
railcontrol/src/buildroot-2018.11/teddy/root/.ssh/: authorized_keys
railcontrol/src/html/: javascript.js  style.css
railcontrol/src/test/: Makefile  functions.php  startrailcontrol.sh  stoprailcontrol.sh  testconfig.conf  testcontrols.php  testlocos.php
si4010prog/: CMakeLists.txt  COPYING  CREDITS  README.md  TODO  config.h.in  nvm_programming.markdown
si4010prog/cmake/: GitGetVersion.cmake
si4010prog/drivers/c2_ft232/: 99-ft232h.rules  README.md
si4010prog/drivers/c2_fx2/: .gitignore  Makefile  README.md  c2prog.c  fx2.rules  timing_fx2_48mhz.c  timing_fx2_48mhz.h  uin.c  uin.h  uout.c  uout.h
si4010prog/drivers/c2_fx2/include/: README.txt  fx2_util.h  fx2regs.h  fx2regs.inc
si4010prog/drivers/c2_gpio/: Makefile  README.md  c2_gpio.c
si4010prog/drivers/c2_lpt/: Makefile  README.md  c2_ioctls.h  c2_lpt.h  cygnal_c2.c
si4010prog/firmware/mtp_prog/: .gitignore  Makefile  mtp_prog.asm  mtp_prog_generated.c
si4010prog/firmware/nvm_dump/: .gitignore  Makefile  nvm_dump.asm  nvm_dump_generated.c
si4010prog/src/: CMakeLists.txt  c2_bus.c  c2_bus.h  c2_bus_c2drv.c  c2_bus_c2drv.h  c2_bus_ftdi.c  c2_bus_ftdi.h  c2_bus_fx2.c  c2_bus_fx2.h  c2_bus_module.h  dehexify.c  dehexify.h  ec2_cksum.c  ec2_cksum.h  ec2_emul.c  ftdi_rebind.sh  main.c  si4010.c  si4010.h
si4010prog/tests/: stress_c2_bus.sh
srse2/railcom/pi_pico/: CMakeLists.txt  main.c  pulse.pio
(+3090 files in other folders)
