cmake_minimum_required(VERSION 3.1)

set(RAILCONTROL_VERSION "20")

project(CMakeTest)

add_executable(railcontrol
Storage/sqlite/sqlite3.c
Storage/sqlite/sqlite3.h
Storage/sqlite/sqlite3ext.h
Manager.cpp
Manager.h
WebServer/WebClient.cpp
WebServer/WebClient.h
ArgumentHandler.cpp
ArgumentHandler.h
Config.cpp
Config.h
ControlInterface.h
DataModel/Accessory.cpp
DataModel/Accessory.h
DataModel/AccessoryBase.cpp
DataModel/AccessoryBase.h
DataModel/AccessoryConfig.h
DataModel/Cluster.cpp
DataModel/Cluster.h
DataModel/DataModel.h
DataModel/Feedback.cpp
DataModel/Feedback.h
DataModel/HardwareHandle.cpp
DataModel/HardwareHandle.h
DataModel/Layer.h
DataModel/LayoutItem.cpp
DataModel/LayoutItem.h
DataModel/LockableItem.cpp
DataModel/LockableItem.h
DataModel/Loco.cpp
DataModel/Loco.h
DataModel/LocoConfig.h
DataModel/LocoFunctions.cpp
DataModel/LocoFunctions.h
DataModel/Object.cpp
DataModel/Object.h
DataModel/ObjectIdentifier.cpp
DataModel/ObjectIdentifier.h
DataModel/Relation.cpp
DataModel/Relation.h
DataModel/Route.cpp
DataModel/Route.h
DataModel/Serializable.cpp
DataModel/Serializable.h
DataModel/Signal.cpp
DataModel/Signal.h
DataModel/Switch.cpp
DataModel/Switch.h
DataModel/Text.cpp
DataModel/Text.h
DataModel/Track.cpp
DataModel/Track.h
DataModel/TrackBase.cpp
DataModel/TrackBase.h
DataTypes.h
Fallthrough.h
Hardware/AccessoryCache.cpp
Hardware/AccessoryCache.h
Hardware/CS1.h
Hardware/CS2Tcp.cpp
Hardware/CS2Tcp.h
Hardware/CS2Udp.cpp
Hardware/CS2Udp.h
Hardware/Capabilities.h
Hardware/CcSchnitte.cpp
Hardware/CcSchnitte.h
Hardware/DR5000.h
Hardware/DccPpExSerial.cpp
Hardware/DccPpExSerial.h
Hardware/DccPpExTcp.cpp
Hardware/DccPpExTcp.h
Hardware/Ecos.h
Hardware/HardwareHandler.cpp
Hardware/HardwareHandler.h
Hardware/HardwareInterface.h
Hardware/HardwareParams.h
Hardware/Hsi88.cpp
Hardware/Hsi88.h
Hardware/Intellibox.h
Hardware/LocoCache.cpp
Hardware/LocoCache.h
Hardware/M6051.cpp
Hardware/M6051.h
Hardware/MasterControl.h
Hardware/MasterControl2.h
Hardware/OpenDcc.h
Hardware/Protocols/DccPpEx.cpp
Hardware/Protocols/DccPpEx.h
Hardware/Protocols/EsuCAN.cpp
Hardware/Protocols/EsuCAN.h
Hardware/Protocols/MaerklinCAN.cpp
Hardware/Protocols/MaerklinCAN.h
Hardware/Protocols/P50x.cpp
Hardware/Protocols/P50x.h
Hardware/Protocols/P50xCache.h
Hardware/Protocols/P50xEthernet.h
Hardware/Protocols/P50xSerial.h
Hardware/Protocols/P50xUhlenbrock.h
Hardware/Protocols/Z21.cpp
Hardware/Protocols/Z21.h
Hardware/Protocols/Z21FeedbackCache.h
Hardware/Protocols/Z21LocoCache.h
Hardware/Protocols/Z21TurnoutCache.h
Hardware/RM485.cpp
Hardware/RM485.h
Hardware/RedBox.h
Hardware/Rektor.h
Hardware/TwinCenter.h
Hardware/Virtual.cpp
Hardware/Virtual.h
Hardware/Z21.h
Hardware/ZLib.cpp
Hardware/ZLib.h
Languages.cpp
Languages.h
Logger/Logger.cpp
Logger/Logger.h
Logger/LoggerClient.h
Logger/LoggerClientConsole.h
Logger/LoggerClientFile.h
Logger/LoggerClientTcp.h
Logger/LoggerServer.cpp
Logger/LoggerServer.h
Network/Select.h
Network/Serial.cpp
Network/Serial.h
Network/TcpClient.cpp
Network/TcpClient.h
Network/TcpConnection.cpp
Network/TcpConnection.h
Network/TcpServer.cpp
Network/TcpServer.h
Network/UdpConnection.cpp
Network/UdpConnection.h
RailControl.cpp
RailControl.h
Storage/Sqlite.cpp
Storage/Sqlite.h
Storage/StorageHandler.cpp
Storage/StorageHandler.h
Storage/StorageInterface.h
Storage/StorageParams.h
Storage/TransactionGuard.cpp
Storage/TransactionGuard.h
Utils/ThreadSafeQueue.h
Utils/Utils.cpp
Utils/Utils.h
WebServer/HtmlTag.cpp
WebServer/HtmlTag.h
WebServer/HtmlTagAccessory.cpp
WebServer/HtmlTagAccessory.h
WebServer/HtmlTagButton.cpp
WebServer/HtmlTagButton.h
WebServer/HtmlTagButtonCancel.h
WebServer/HtmlTagButtonCommand.cpp
WebServer/HtmlTagButtonCommand.h
WebServer/HtmlTagButtonCommandFullScreen.cpp
WebServer/HtmlTagButtonCommandFullScreen.h
WebServer/HtmlTagButtonCommandPressRelease.cpp
WebServer/HtmlTagButtonCommandPressRelease.h
WebServer/HtmlTagButtonCommandToggle.cpp
WebServer/HtmlTagButtonCommandToggle.h
WebServer/HtmlTagButtonCommandWide.h
WebServer/HtmlTagButtonMinus.h
WebServer/HtmlTagButtonOK.h
WebServer/HtmlTagButtonPlus.h
WebServer/HtmlTagButtonPopup.cpp
WebServer/HtmlTagButtonPopup.h
WebServer/HtmlTagButtonPopupWide.h
WebServer/HtmlTagFeedback.cpp
WebServer/HtmlTagFeedback.h
WebServer/HtmlTagInput.cpp
WebServer/HtmlTagInput.h
WebServer/HtmlTagInputCheckbox.h
WebServer/HtmlTagInputCheckboxWithLabel.h
WebServer/HtmlTagInputHidden.h
WebServer/HtmlTagInputInteger.cpp
WebServer/HtmlTagInputInteger.h
WebServer/HtmlTagInputIntegerWithLabel.h
WebServer/HtmlTagInputSlider.cpp
WebServer/HtmlTagInputSlider.h
WebServer/HtmlTagInputSliderLocoSpeed.cpp
WebServer/HtmlTagInputSliderLocoSpeed.h
WebServer/HtmlTagInputText.h
WebServer/HtmlTagInputTextWithLabel.h
WebServer/HtmlTagLabel.h
WebServer/HtmlTagLayoutItem.cpp
WebServer/HtmlTagLayoutItem.h
WebServer/HtmlTagRoute.cpp
WebServer/HtmlTagRoute.h
WebServer/HtmlTagSelect.cpp
WebServer/HtmlTagSelect.h
WebServer/HtmlTagSelectOrientation.h
WebServer/HtmlTagSelectOrientationWithLabel.h
WebServer/HtmlTagSelectWithLabel.h
WebServer/HtmlTagSignal.cpp
WebServer/HtmlTagSignal.h
WebServer/HtmlTagSwitch.cpp
WebServer/HtmlTagSwitch.h
WebServer/HtmlTagText.cpp
WebServer/HtmlTagText.h
WebServer/HtmlTagTrack.cpp
WebServer/HtmlTagTrack.h
WebServer/HtmlTagTrackBase.cpp
WebServer/HtmlTagTrackBase.h
WebServer/Response.cpp
WebServer/Response.h
WebServer/ResponseCsv.cpp
WebServer/ResponseCsv.h
WebServer/ResponseHtml.cpp
WebServer/ResponseHtml.h
WebServer/ResponseHtmlFull.cpp
WebServer/ResponseHtmlFull.h
WebServer/ResponseHtmlNotFound.cpp
WebServer/ResponseHtmlNotFound.h
WebServer/ResponseHtmlNotImplemented.cpp
WebServer/ResponseHtmlNotImplemented.h
WebServer/WebClientCluster.cpp
WebServer/WebClientCluster.h
WebServer/WebClientRoute.cpp
WebServer/WebClientRoute.h
WebServer/WebClientSignal.cpp
WebServer/WebClientSignal.h
WebServer/WebClientStatic.cpp
WebServer/WebClientStatic.h
WebServer/WebClientText.cpp
WebServer/WebClientText.h
WebServer/WebClientTrack.cpp
WebServer/WebClientTrack.h
WebServer/WebClientTrackBase.cpp
WebServer/WebClientTrackBase.h
WebServer/WebServer.cpp
WebServer/WebServer.h
Version.cpp.in
Version.cpp
Version.cpp.dummy
Version.h
Hardware/zlib/adler32.c
Hardware/zlib/compress.c
Hardware/zlib/crc32.c
Hardware/zlib/crc32.h
Hardware/zlib/deflate.c
Hardware/zlib/deflate.h
Hardware/zlib/gzclose.c
Hardware/zlib/gzguts.h
Hardware/zlib/gzlib.c
Hardware/zlib/gzread.c
Hardware/zlib/gzwrite.c
Hardware/zlib/infback.c
Hardware/zlib/inffast.c
Hardware/zlib/inffast.h
Hardware/zlib/inffixed.h
Hardware/zlib/inflate.c
Hardware/zlib/inflate.h
Hardware/zlib/inftrees.c
Hardware/zlib/inftrees.h
Hardware/zlib/trees.c
Hardware/zlib/trees.h
Hardware/zlib/uncompr.c
Hardware/zlib/zconf.h
Hardware/zlib/zlib.h
Hardware/zlib/zutil.c
Hardware/zlib/zutil.h
)

set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "")
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_FLAGS_DEBUG "-O0")
set(CMAKE_CXX_FLAGS_RELEASE "-O2")
set(CMAKE_CXX_FLAGS "-g -Wall -Wextra -pedantic -Werror")
set(CMAKE_C_FLAGS "-g -DSQLITE_ENABLE_FTS4 -DSQLITE_ENABLE_JSON1 -DSQLITE_ENABLE_RTREE -DHAVE_USLEEP -Wno-implicit-function-declaration -Wno-return-local-addr")

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(railcontrol PRIVATE Threads::Threads dl)

target_include_directories(railcontrol PRIVATE .)

add_custom_command(OUTPUT Version.cpp Version.cpp.dummy
	DEPENDS Version.cpp.in
	COMMAND git status -s| wc -l > ${CMAKE_CURRENT_SOURCE_DIR}/git_dirty.txt
	COMMAND sed s/@COMPILE_TIMESTAMP@/`date +%s`/ < ${CMAKE_CURRENT_SOURCE_DIR}/Version.cpp.in | sed s/@GIT_HASH@/`git log -1 --format=%H`/ | sed s/@GIT_TIMESTAMP@/`git log -1 --format=%at`/ | sed s,@GIT_DIRTY@,`cat ${CMAKE_CURRENT_SOURCE_DIR}/git_dirty.txt`, | sed s/@RAILCONTROL_VERSION@/${RAILCONTROL_VERSION}/ > ${CMAKE_CURRENT_SOURCE_DIR}/Version.cpp
	COMMAND rm ${CMAKE_CURRENT_SOURCE_DIR}/git_dirty.txt
	COMMENT "Creating Version.cpp")

