if (WITH_C2_BUS_FT232)
	list(APPEND C2_BUS_SOURCES "c2_bus_ftdi.c")
	list(APPEND C2_BUS_LIBRARIES "-lftdi")
endif (WITH_C2_BUS_FT232)
if (WITH_C2_BUS_FX2)
	list(APPEND C2_BUS_SOURCES "c2_bus_fx2.c")
	list(APPEND C2_BUS_LIBRARIES "-lusb")
endif (WITH_C2_BUS_FX2)
if (WITH_C2_BUS_C2DRV)
	include_directories("${PROJECT_SOURCE_DIR}/drivers/c2_lpt")
	list(APPEND C2_BUS_SOURCES "c2_bus_c2drv.c")
endif (WITH_C2_BUS_C2DRV)

add_executable(si4010prog main.c si4010.c c2_bus.c ${C2_BUS_SOURCES} dehexify.c)
add_dependencies(si4010prog git_version)
target_link_libraries(si4010prog ${C2_BUS_LIBRARIES})

add_executable(ec2_emul ec2_emul.c si4010.c c2_bus.c ${C2_BUS_SOURCES} ec2_cksum.c)
add_dependencies(ec2_emul git_version)
target_link_libraries(ec2_emul ${C2_BUS_LIBRARIES})
